main/skin/default/style.css
/* ... */
/* YouTube and Vimeo. http://embedresponsively.com */
.video-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; }
.video-container > iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
.opt.hidden { display: none; }
.toggle.hidden { display: none; }
/**************************************************************************************/
body.login { background-color: #ccccc0; }
body.login #column-content { padding: 0px 0 20px 0; }

/** index.tmpl - login form **/
form#login
{
  background-repeat: no-repeat;
  /* background image : 500x640 pixels */
  width: 320px;
  padding: 431px 50px 100px 150px;
  height: 100px;
  margin: 0 auto 0 auto;
}

@media screen and (max-width: 480px) {
  form#login {
    background-position: -0px -400px;
    overflow: visible;
    width: 260px;
    padding: 255px 20px 25px 20px;
    padding: 55px 15px 25px 20px;
    margin-top: 210px; /* hide upper background image */
  }
}

table.login-form { position: relative; margin: 0 0 0 auto; }
table.login-form td { vertical-align: middle; }
table.login-form td.label { width: 4em; }
table.login-form td.input { width: 8em; }
table.login-form table td { border: 2px solid #ccccc0; }

form#login label { color: #fff; font-weight: bold; white-space: nowrap; line-height: 100%; }
form#login input { color: #fff; width: 8em; height: 1.5em; padding: 0; padding-left: 5px; margin: 0; }
form#login input { border: 1px solid #fff; background-color: #B9B9AD; font-size: 100%; }

form#login input:-webkit-autofill { color: #333; }
/* webkit has a hard coded bgcolor #FAFFBD for autofill input */
form#login input#login_submit { display: block; width: 3.35em; height: 3.35em; margin: 1px 0 1px 0; }
form#login input#login_submit:active { background-color: #A9A99D; color: #333; border: 1px solid #333; }

form#login fieldset { position: relative; text-align: right; }
form#login fieldset { padding: 0; border: 0; margin: 0; }
form#login fieldset a { color: #666; text-decoration: none; padding: 4px 6px 2px 6px; }
form#login fieldset a:hover  { background: #bbb; }
form#login fieldset a:active { background: #aaa; color: #000; }
form#login fieldset div { padding: 10px 5px 0 0; }


/** index.tmpl - login form **/
body.board.read form#login
{
  background: none;
  width: 320px;
  padding: 0 30px 0 30px;
  height: 130px;
  margin: 0 auto 0 auto;
  border: 0px dotted red;
}

body.board.read table.login-form td.label { padding-left: 100px; }
body.board.read table.login-form table td { border: 2px solid transparent; }

body.board.read form#login label { color: #333; }
body.board.read form#login input { color: #333; }
body.board.read form#login input { border: 1px solid #999; background-color: #e9e9dD; }

body.board.read form#login fieldset a:hover  { background: #eee; }
body.board.read form#login fieldset a:active { background: #ddd; color: #111; }

@media screen and (max-width: 480px) {
  body.board.read 
  form#login {
    overflow: visible;
    width: 260px;
    padding: 05px 15px 05px 00px;
  }
  body.board.read table.login-form td.label { padding-left: 20px; }
}
	
/**************************************************************************************/
/** index.tmpl - notice to update personal information **/
div.notice
{	
	width: 680px;
	margin: 40px auto 0 auto;
	padding: 0 0 2em 0;
	background-color: #fff;
	border: 1px solid #000;
	color: #000;
}
div.notice h2
{
	color: #fff;
	background-color: #000;
	font-weight: normal;
	text-align: center;
	margin-bottom: 2em;
}
div.notice p
{
	margin: 0 3em 1em 3em;
	text-align: center;
}
/**************************************************************************************/
#top-menu               { position: relative; width: 100%; z-index: 10; background: #ccccc0; }
#top-menu img           { display: block; }
#top-menu img.top-logo  { position: relative; float: left;  width:  78px; height: 40px; }
#top-menu img.main-menu { position: absolute; right: 0; top: 0; width: 260px; height: 26px; margin-top: 14px; }
/* iphone 2/3 screen size: 480x320 px */
@media screen and (max-width: 470px) { #top-menu img.main-menu { clip: rect(0px, 260px, 26px, 45px); } }

#top-menu p.hint   { float: left; font-size: 0.7em; padding: 11px 0 0 8px; color: white; }
#top-menu p.hint a { color: white; }
@media screen and (max-width: 470px) { #top-menu p.hint { display: none; } }

#top-menu ul.contents-menu
{
  clear: left;
  display: block;
  width: auto;
  background: #000066;
  line-height: 170%;
  padding: 0 5px 0 5px;
}
#top-menu ul.contents-menu li   { display: table-cell; padding: 0px 4px 0px 4px; }
#top-menu ul.contents-menu li   { color: white; outline: 0px dotted white; white-space: nowrap; }
#top-menu ul.contents-menu li.separator { width: 80%; }
#top-menu ul.contents-menu li.user { text-align: right; }
#top-menu ul.contents-menu li a { color: white; cursor: pointer; white-space: nowrap; }
#top-menu ul.contents-menu li a:hover { color: #CCE5FF; }
#top-menu ul.contents-menu li.toggle.switch { display: none; }
@media screen and (max-width: 480px) {
  #top-menu ul.contents-menu li   { display: inline-block; outline: 0px dotted white; }
  #top-menu ul.contents-menu li.toggle.switch { display: inline-block; }
  #top-menu ul.contents-menu li.toggle.hidden { display: none; }
  #top-menu ul.contents-menu li.separator { display: none; }
  #top-menu ul.contents-menu li.user { float: right; text-align: right; }
  #top-menu ul.contents-menu:after { content: "clearing float"; clear: both; display: block; height: 0; visibility: hidden; }
}
/**************************************************************************************/
body.news #column-content,
body.news #content  { max-width: 850px; }
#wp  { }
#bd  { display: table; }
#doc { display: table-row; }
#s1,#s2,#s3 { display: table-cell; vertical-align: top; }
@media screen and (max-width: 480px) {
 #bd,#doc,#s1,#s2,#s3 { display: block; }
}

#hd,#ft,{ display: block; }
/* ... */

